--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Bloc skeleton project for a single page application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "bash ./post_install.sh"
   },
   "author": "Bloc and Nick Ferraro",
   "license": "ISC",
   "dependencies": {
+    "grunt": "^0.4.5",
     "hapi": "^7.5.0",
     "path": "^0.4.9"
   },
